--- a/index.html
+++ b/index.html
@@ -403,6 +403,7 @@
    <!-- Projects -->
 
 <!-- Projects -->
+<!-- Projects -->
 <section class="max-w-6xl mx-auto px-4" data-aos="fade-up" data-aos-delay="200" id="projects">
   <h2 class="text-3xl font-bold mb-8 border-b-2 border-blue-600 inline-block pb-1">Projects</h2>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -414,8 +415,7 @@
         background="transparent"
         speed="1"
         style="width: 100%; height: 200px"
-        loop
-        autoplay
+        loop autoplay
         aria-label="Document AI animation"
       ></lottie-player>
       <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">📄 SnapDocs AI App</h3>
@@ -424,46 +424,48 @@
       </p>
       <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Flask, TailwindCSS, Python</p>
       <div class="flex gap-4">
-        <a href="https://github.com/Azad-Bhasme/SnapDocsAI.git" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
-        <a href="https://snapdocs-ai.onrender.com" target="_blank" class="text-blue-600 hover:underline font-medium">🚀 Demo</a>
+        <a href="https://github.com/Azad-Bhasme/SnapDocsAI.git" target="_blank" class="text-blue-600 hover:underline font-medium">
+          <i class="fab fa-github fa-lg"></i> GitHub
+        </a>
+        <a href="https://snapdocs-ai.onrender.com" target="_blank" class="text-blue-600 hover:underline font-medium">
+          🚀 Demo
+        </a>
       </div>
     </div>
 
     <!-- FireWatch AI -->
-        <div class="card ...">
-  <lottie-player
-    src="https://assets8.lottiefiles.com/packages/lf20_j1adxtyb.json"
-    background="transparent"
-    speed="1"
-    style="width: 100%; height: 200px;"
-    loop
-    autoplay
-    aria-label="Fire detection animation"
-  ></lottie-player>
-  <h3>🔥 FireWatch AI</h3>
-  ...
-</div>
-
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+      <lottie-player
+        src="https://assets7.lottiefiles.com/packages/lf20_ehlhgsnm.json"
+        background="transparent"
+        speed="1"
+        style="width: 100%; height: 200px;"
+        loop autoplay
+        aria-label="Fire detection animation"
+      ></lottie-player>
       <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🔥 FireWatch AI</h3>
       <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
         Real-time fire detection system using YOLOv8 and OpenCV to detect and annotate fire in live video feeds.
       </p>
       <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, YOLOv8, OpenCV, Streamlit</p>
       <div class="flex gap-4">
-        <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
-        <a href="https://firewatch-ai-byazad.streamlit.app" target="_blank" class="text-blue-600 hover:underline font-medium">🚀 Demo</a>
+        <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium">
+          <i class="fab fa-github fa-lg"></i> GitHub
+        </a>
+        <a href="https://firewatch-ai-byazad.streamlit.app" target="_blank" class="text-blue-600 hover:underline font-medium">
+          🚀 Demo
+        </a>
       </div>
     </div>
 
     <!-- CineSuggest -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
-       <lottie-player
+      <lottie-player
         src="https://assets9.lottiefiles.com/packages/lf20_j1adxtyb.json"
         background="transparent"
         speed="1"
         style="width: 100%; height: 200px"
-        loop
-        autoplay
+        loop autoplay
         aria-label="Movie recommendation animation"
       ></lottie-player>
       <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🎬 CineSuggest</h3>
@@ -472,60 +474,61 @@
       </p>
       <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Streamlit, Pandas, TMDb API, Scikit-learn</p>
       <div class="flex gap-4">
-        <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
-        <a href="https://cinesuggest-byazad.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">🚀 Demo</a>
+        <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium">
+          <i class="fab fa-github fa-lg"></i> GitHub
+        </a>
+        <a href="https://cinesuggest-byazad.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">
+          🚀 Demo
+        </a>
       </div>
     </div>
 
     <!-- Relativistic Calculator -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
-     <lottie-player
+      <lottie-player
         src="https://assets2.lottiefiles.com/private_files/lf30_t26law.json"
         background="transparent"
         speed="1"
         style="width: 100%; height: 200px"
-        loop
-        autoplay
+        loop autoplay
         aria-label="Physics calculator"
       ></lottie-player>
-      
       <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🌌 Relativistic Mass & Time Dilation Calculator</h3>
       <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
         Calculates relativistic mass and time dilation using Einstein’s theory. Great for learning physics and space science.
       </p>
       <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Special Relativity, Physics</p>
       <div class="flex gap-4">
-        <a href="https://github.com/Azad-Bhasme/Relativistic-Mass-and-Time-Dilation-Calculator" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
+        <a href="https://github.com/Azad-Bhasme/Relativistic-Mass-and-Time-Dilation-Calculator" target="_blank" class="text-blue-600 hover:underline font-medium">
+          <i class="fab fa-github fa-lg"></i> GitHub
+        </a>
       </div>
     </div>
 
     <!-- Cancer Prediction Web App -->
-    <!-- Cancer Prediction Web App -->
-<div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
-  <lottie-player
-    src="https://assets5.lottiefiles.com/packages/lf20_9p4wz3en.json"
-    background="transparent"
-    speed="1"
-    style="width: 100%; height: 200px;"
-    loop
-    autoplay
-    aria-label="Medical diagnosis animation"
-  ></lottie-player>
-  <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🚀 Cancer Prediction Web App</h3>
-  <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
-    A Streamlit tool using a Random Forest classifier to predict tumor type, with an intuitive UI for medical decision support.
-  </p>
-  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Streamlit, Machine Learning</p>
-  <div class="flex gap-4">
-    <a href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank" class="text-blue-600 hover:underline font-medium">
-      <i class="fab fa-github fa-lg"></i> GitHub
-    </a>
-    <a href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">
-      🚀 Demo
-    </a>
-  </div>
-</div>
-
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+      <lottie-player
+        src="https://assets4.lottiefiles.com/private_files/lf30_xlmz9xwm.json"
+        background="transparent"
+        speed="1"
+        style="width: 100%; height: 200px;"
+        loop autoplay
+        aria-label="Medical diagnosis animation"
+      ></lottie-player>
+      <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🚀 Cancer Prediction Web App</h3>
+      <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
+        A Streamlit tool using a Random Forest classifier to predict tumor type, with an intuitive UI for medical decision support.
+      </p>
+      <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Streamlit, Machine Learning</p>
+      <div class="flex gap-4">
+        <a href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank" class="text-blue-600 hover:underline font-medium">
+          <i class="fab fa-github fa-lg"></i> GitHub
+        </a>
+        <a href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">
+          🚀 Demo
+        </a>
+      </div>
+    </div>
 
     <!-- Dashboard Project -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
