--- a/index.html
+++ b/index.html
@@ -436,7 +436,8 @@
     <!-- FireWatch AI -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
       <lottie-player
-        src="https://assets7.lottiefiles.com/packages/lf20_ehlhgsnm.json"
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
         background="transparent"
         speed="1"
         style="width: 100%; height: 200px;"
@@ -508,7 +509,7 @@
     <!-- Cancer Prediction Web App -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
       <lottie-player
-        src="https://assets4.lottiefiles.com/private_files/lf30_xlmz9xwm.json"
+        src="https://assets10.lottiefiles.com/packages/lf20_jggrcks9.json"
         background="transparent"
         speed="1"
         style="width: 100%; height: 200px;"
