--- a/index.html
+++ b/index.html
@@ -509,7 +509,8 @@
     <!-- Cancer Prediction Web App -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
       <lottie-player
-        src="https://assets10.lottiefiles.com/packages/lf20_jggrcks9.json"
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
         background="transparent"
         speed="1"
         style="width: 100%; height: 200px;"
