--- a/index.html
+++ b/index.html
@@ -360,17 +360,6 @@
     </div>
 
 
-    <!-- Skill: Machine Learning -->
-<div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default" title="Machine Learning - Intermediate">
-  <img alt="Machine Learning icon" class="w-16 h-16" height="64"
-    src="https://cdn-icons-png.flaticon.com/512/2850/2850155.png" width="64" />
-  <h3 class="font-semibold text-lg">Machine Learning</h3>
-  <div class="w-full skill-bar">
-    <div style="width: 70%; background-color:#6A5495;"></div>
-  </div>
-  <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
-</div>
-
 <!-- Skill: Deep Learning -->
 <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default" title="Deep Learning - Intermediate">
   <img alt="Deep Learning icon" class="w-16 h-16" height="64"
@@ -382,16 +371,38 @@
   <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
 </div>
 
-<!-- Skill: Power BI (updated icon) -->
+<!-- Machine Learning -->
+<div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default" title="Machine Learning - Intermediate">
+  <img
+    alt="Machine Learning icon"
+    class="w-16 h-16"
+    height="64"
+    src="https://img.icons8.com/color/96/000000/machine-learning.png"
+    width="64"
+  />
+  <h3 class="font-semibold text-lg">Machine Learning</h3>
+  <div class="w-full skill-bar">
+    <div style="width: 70%; background-color:#6A5495;"></div>
+  </div>
+  <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+</div>
+
+<!-- Power BI -->
 <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default" title="Power BI - Intermediate">
-  <img alt="Power BI icon" class="w-16 h-16" height="64"
-    src="https://cdn-icons-png.flaticon.com/512/888/888853.png" width="64" />
+  <img
+    alt="Power BI icon"
+    class="w-16 h-16"
+    height="64"
+    src="https://img.icons8.com/color/96/000000/microsoft-power-bi.png"
+    width="64"
+  />
   <h3 class="font-semibold text-lg">Power BI</h3>
   <div class="w-full skill-bar">
     <div style="width: 75%; background-color:#F2C811;"></div>
   </div>
   <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
 </div>
+
 
 
    
