--- a/index.html
+++ b/index.html
@@ -360,53 +360,22 @@
     </div>
 
 
-<!-- Skill: Deep Learning -->
-<div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default" title="Deep Learning - Intermediate">
-  <img alt="Deep Learning icon" class="w-16 h-16" height="64"
-    src="https://cdn-icons-png.flaticon.com/512/3584/3584071.png" width="64" />
-  <h3 class="font-semibold text-lg">Deep Learning</h3>
-  <div class="w-full skill-bar">
-    <div style="width: 65%; background-color:#FF6F61;"></div>
-  </div>
-  <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
-</div>
-
 <!-- Machine Learning -->
-<div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default" title="Machine Learning - Intermediate">
-  <img
-    alt="Machine Learning icon"
-    class="w-16 h-16"
-    height="64"
-    src="https://img.icons8.com/color/96/000000/machine-learning.png"
-    width="64"
-  />
+<div class="card p-6 rounded-lg flex flex-col items-center space-y-4">
+  <img src="https://img.icons8.com/color/96/artificial-intelligence.png" alt="Machine Learning icon" class="w-16 h-16" />
   <h3 class="font-semibold text-lg">Machine Learning</h3>
-  <div class="w-full skill-bar">
-    <div style="width: 70%; background-color:#6A5495;"></div>
-  </div>
+  <div class="w-full skill-bar"><div style="width: 70%; background-color:#6A5495;"></div></div>
   <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
 </div>
 
 <!-- Power BI -->
-<div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default" title="Power BI - Intermediate">
-  <img
-    alt="Power BI icon"
-    class="w-16 h-16"
-    height="64"
-    src="https://img.icons8.com/color/96/000000/microsoft-power-bi.png"
-    width="64"
-  />
+<div class="card p-6 rounded-lg flex flex-col items-center space-y-4">
+  <img src="https://img.icons8.com/color/96/microsoft-power-bi.png" alt="Power BI icon" class="w-16 h-16" />
   <h3 class="font-semibold text-lg">Power BI</h3>
-  <div class="w-full skill-bar">
-    <div style="width: 75%; background-color:#F2C811;"></div>
-  </div>
+  <div class="w-full skill-bar"><div style="width: 75%; background-color:#F2C811;"></div></div>
   <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
 </div>
 
-
-
-   
-   
   </div>
 </section>
 
@@ -446,15 +415,16 @@
 
     <!-- FireWatch AI -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
-      <lottie-player
-        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+     <lottie-player
+  src="https://lottie.host/01fc8d3a-d2a6-4eae-a3d6-b1b2f225e390/3ISF3UNLVr.json"
+  background="transparent"
+  speed="1"
+  style="width: 100%; height: 200px;"
+  loop
+  autoplay
+  aria-label="Fire detection animation"
+></lottie-player>
 
-        background="transparent"
-        speed="1"
-        style="width: 100%; height: 200px;"
-        loop autoplay
-        aria-label="Fire detection animation"
-      ></lottie-player>
       <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🔥 FireWatch AI</h3>
       <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
         Real-time fire detection system using YOLOv8 and OpenCV to detect and annotate fire in live video feeds.
@@ -520,14 +490,15 @@
     <!-- Cancer Prediction Web App -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
       <lottie-player
-        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  src="https://lottie.host/3e8b7afc-f7f7-4e06-93f2-07ae62cd70d3/Q4vNcNGM2F.json"
+  background="transparent"
+  speed="1"
+  style="width: 100%; height: 200px;"
+  loop
+  autoplay
+  aria-label="Cancer prediction"
+></lottie-player>
 
-        background="transparent"
-        speed="1"
-        style="width: 100%; height: 200px;"
-        loop autoplay
-        aria-label="Medical diagnosis animation"
-      ></lottie-player>
       <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🚀 Cancer Prediction Web App</h3>
       <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
         A Streamlit tool using a Random Forest classifier to predict tumor type, with an intuitive UI for medical decision support.
