--- a/index.html
+++ b/index.html
@@ -369,13 +369,12 @@
 </div>
 
 <!-- Power BI -->
-<div class="card p-6 rounded-lg flex flex-col items-center space-y-4">
-  <img src="https://img.icons8.com/color/96/microsoft-power-bi.png" alt="Power BI icon" class="w-16 h-16" />
+ <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default" title="Power BI - Intermediate">
+  <img alt="Power BI logo icon" class="w-16 h-16" src="https://raw.githubusercontent.com/microsoft/PowerBI-Icons/main/PNG/Power%20BI%20Logo.png"/>
   <h3 class="font-semibold text-lg">Power BI</h3>
-  <div class="w-full skill-bar"><div style="width: 75%; background-color:#F2C811;"></div></div>
+  <div class="w-full skill-bar"><div style="width: 70%; background-color:#F2C811;"></div></div>
   <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
 </div>
-
   </div>
 </section>
 
@@ -416,15 +415,13 @@
     <!-- FireWatch AI -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
      <lottie-player
-  src="https://lottie.host/01fc8d3a-d2a6-4eae-a3d6-b1b2f225e390/3ISF3UNLVr.json"
-  background="transparent"
-  speed="1"
-  style="width: 100%; height: 200px;"
-  loop
-  autoplay
-  aria-label="Fire detection animation"
-></lottie-player>
-
+    src="https://assets3.lottiefiles.com/packages/lf20_1pltmuyb.json"
+    background="transparent"
+    speed="1"
+    style="width:100%; height:200px;"
+    loop autoplay
+    aria-label="Fire detection animation">
+</lottie-player>
       <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🔥 FireWatch AI</h3>
       <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
         Real-time fire detection system using YOLOv8 and OpenCV to detect and annotate fire in live video feeds.
@@ -489,15 +486,15 @@
 
     <!-- Cancer Prediction Web App -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
-      <lottie-player
-  src="https://lottie.host/3e8b7afc-f7f7-4e06-93f2-07ae62cd70d3/Q4vNcNGM2F.json"
-  background="transparent"
-  speed="1"
-  style="width: 100%; height: 200px;"
-  loop
-  autoplay
-  aria-label="Cancer prediction"
-></lottie-player>
+        <lottie-player
+        
+          src="https://assets3.lottiefiles.com/packages/lf20_V9t630.json"
+            background="transparent"
+           speed="1"
+           style="width:100%; height:200px;"
+          loop autoplay
+        aria-label="Medical diagnosis animation">
+     </lottie-player>
 
       <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🚀 Cancer Prediction Web App</h3>
       <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
