--- a/index.html
+++ b/index.html
@@ -369,12 +369,22 @@
 </div>
 
 <!-- Power BI -->
- <div class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default" title="Power BI - Intermediate">
-  <img alt="Power BI logo icon" class="w-16 h-16" src="https://raw.githubusercontent.com/microsoft/PowerBI-Icons/main/PNG/Power%20BI%20Logo.png"/>
-  <h3 class="font-semibold text-lg">Power BI</h3>
-  <div class="w-full skill-bar"><div style="width: 70%; background-color:#F2C811;"></div></div>
-  <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+<div
+  class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
+  title="Power BI - Intermediate"
+>
+  <img
+    src="https://upload.wikimedia.org/wikipedia/commons/c/cf/New_Power_BI_Logo.svg"
+    alt="Power BI icon"
+    class="w-16 h-16"
+  />
+  <h3 class="font-semibold text-lg text-white">Power BI</h3>
+  <div class="w-full h-2 bg-gray-700 rounded-full overflow-hidden">
+    <div class="h-full bg-yellow-400 w-3/4"></div> <!-- 75% -->
+  </div>
+  <span class="text-sm text-gray-300">Intermediate</span>
 </div>
+
   </div>
 </section>
 
