--- a/index.html
+++ b/index.html
@@ -424,20 +424,20 @@
     
 
     <!-- FireWatch AI -->
-      <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
   <img
     src="https://cdn-icons-png.flaticon.com/512/482/482059.png"
     alt="Fire detection logo"
-    class="w-full h-48 object-contain mb-4"
+    class="w-24 h-24 mx-auto mb-4"
   />
-  <h3 class="text-xl font-semibold text-blue-600 mt-2 mb-2">🔥 FireWatch AI</h3>
-  <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
-    Real-time fire detection system using YOLOv8 and OpenCV to detect and annotate fire in live video feeds.
+  <h3 class="text-xl font-semibold text-blue-600 text-center mb-2">🔥 FireWatch AI</h3>
+  <p class="text-gray-700 dark:text-gray-300 text-sm text-center mb-3">
+    Real-time fire detection system using YOLOv8 and OpenCV to detect and highlight fire in video streams.
   </p>
-  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, YOLOv8, OpenCV, Streamlit</p>
-  <div class="flex gap-4">
-    <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium">
-      <i class="fab fa-github fa-lg"></i> GitHub
+  <p class="text-sm text-gray-600 dark:text-gray-400 italic text-center mb-2">Tech: Python, YOLOv8, OpenCV, Streamlit</p>
+  <div class="flex justify-center gap-4">
+    <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium flex items-center space-x-1">
+      <i class="fab fa-github fa-lg"></i><span>GitHub</span>
     </a>
     <a href="https://firewatch-ai-byazad.streamlit.app" target="_blank" class="text-blue-600 hover:underline font-medium">
       🚀 Demo
@@ -445,7 +445,6 @@
   </div>
 </div>
 
-     
     <!-- CineSuggest -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
       <lottie-player
@@ -496,18 +495,18 @@
     <!-- Cancer Prediction Web App -->
    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
   <img
-    src="https://cdn-icons-png.flaticon.com/512/3011/3011270.png"
-    alt="Cancer prediction logo"
-    class="w-full h-48 object-contain mb-4"
+    src="https://cdn-icons-png.flaticon.com/512/2810/2810895.png"
+    alt="Cancer diagnosis logo"
+    class="w-24 h-24 mx-auto mb-4"
   />
-  <h3 class="text-xl font-semibold text-blue-600 mt-2 mb-2">🎗️ Cancer Prediction Web App</h3>
-  <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
-    A Streamlit tool using a Random Forest classifier to predict tumor type, with an intuitive UI for medical decision support.
+  <h3 class="text-xl font-semibold text-blue-600 text-center mb-2">🧬 Cancer Prediction Web App</h3>
+  <p class="text-gray-700 dark:text-gray-300 text-sm text-center mb-3">
+    A Streamlit tool using a Random Forest classifier to predict tumor types. Intuitive UI for assisting medical decisions.
   </p>
-  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Streamlit, Machine Learning</p>
-  <div class="flex gap-4">
-    <a href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank" class="text-blue-600 hover:underline font-medium">
-      <i class="fab fa-github fa-lg"></i> GitHub
+  <p class="text-sm text-gray-600 dark:text-gray-400 italic text-center mb-2">Tech: Python, Streamlit, Machine Learning</p>
+  <div class="flex justify-center gap-4">
+    <a href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank" class="text-blue-600 hover:underline font-medium flex items-center space-x-1">
+      <i class="fab fa-github fa-lg"></i><span>GitHub</span>
     </a>
     <a href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">
       🚀 Demo
