--- a/index.html
+++ b/index.html
@@ -424,11 +424,11 @@
     
 
     <!-- FireWatch AI -->
-  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+        <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
   <img
-    src="https://cdn-icons-png.flaticon.com/512/482/482059.png"
+    src="https://cdn-icons-png.flaticon.com/512/482/482541.png"
     alt="Fire detection logo"
-    class="w-24 h-24 mx-auto mb-4"
+    class="w-20 h-20 mx-auto mb-4"
   />
   <h3 class="text-xl font-semibold text-blue-600 text-center mb-2">🔥 FireWatch AI</h3>
   <p class="text-gray-700 dark:text-gray-300 text-sm text-center mb-3">
@@ -436,12 +436,8 @@
   </p>
   <p class="text-sm text-gray-600 dark:text-gray-400 italic text-center mb-2">Tech: Python, YOLOv8, OpenCV, Streamlit</p>
   <div class="flex justify-center gap-4">
-    <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium flex items-center space-x-1">
-      <i class="fab fa-github fa-lg"></i><span>GitHub</span>
-    </a>
-    <a href="https://firewatch-ai-byazad.streamlit.app" target="_blank" class="text-blue-600 hover:underline font-medium">
-      🚀 Demo
-    </a>
+    <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
+    <a href="https://firewatch-ai-byazad.streamlit.app" target="_blank" class="text-blue-600 hover:underline font-medium">🚀 Demo</a>
   </div>
 </div>
 
@@ -493,11 +489,11 @@
     </div>
 
     <!-- Cancer Prediction Web App -->
-   <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+         <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
   <img
     src="https://cdn-icons-png.flaticon.com/512/2810/2810895.png"
-    alt="Cancer diagnosis logo"
-    class="w-24 h-24 mx-auto mb-4"
+    alt="Cancer prediction logo"
+    class="w-20 h-20 mx-auto mb-4"
   />
   <h3 class="text-xl font-semibold text-blue-600 text-center mb-2">🧬 Cancer Prediction Web App</h3>
   <p class="text-gray-700 dark:text-gray-300 text-sm text-center mb-3">
@@ -505,12 +501,8 @@
   </p>
   <p class="text-sm text-gray-600 dark:text-gray-400 italic text-center mb-2">Tech: Python, Streamlit, Machine Learning</p>
   <div class="flex justify-center gap-4">
-    <a href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank" class="text-blue-600 hover:underline font-medium flex items-center space-x-1">
-      <i class="fab fa-github fa-lg"></i><span>GitHub</span>
-    </a>
-    <a href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">
-      🚀 Demo
-    </a>
+    <a href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
+    <a href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">🚀 Demo</a>
   </div>
 </div>
 
