--- a/index.html
+++ b/index.html
@@ -424,23 +424,36 @@
     
 
     <!-- FireWatch AI -->
-     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
-  <img src="https://chat.openai.com/mnt/data/up-in-flames-fire.gif" alt="Fire Detection Animation" style="width: 100%; height: 200px;" />
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+  <img
+    src="https://drive.google.com/uc?export=view&id=1NPcV68kiBIK5qOmAzEczxn611lgDTdot"
+    alt="FireWatch AI"
+    style="width: 100%; height: 200px; object-fit: contain;"
+  />
   <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🔥 FireWatch AI</h3>
   <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
-    Real-time fire detection system using YOLOv8 and OpenCV to detect and highlight fire in video streams.
+    Real-time fire detection system using YOLOv8 and OpenCV to detect and annotate fire in live video feeds.
   </p>
-  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, YOLOv8, OpenCV, Streamlit</p>
+  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">
+    Tech: Python, YOLOv8, OpenCV, Streamlit
+  </p>
   <div class="flex gap-4">
-    <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium">
+    <a
+      href="https://github.com/Azad-Bhasme"
+      target="_blank"
+      class="text-blue-600 hover:underline font-medium"
+    >
       <i class="fab fa-github fa-lg"></i> GitHub
     </a>
-    <a href="https://firewatch-ai-byazad.streamlit.app" target="_blank" class="text-blue-600 hover:underline font-medium">
+    <a
+      href="https://firewatch-ai-byazad.streamlit.app"
+      target="_blank"
+      class="text-blue-600 hover:underline font-medium"
+    >
       🚀 Demo
     </a>
   </div>
 </div>
-
 
     <!-- CineSuggest -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
@@ -490,22 +503,37 @@
     </div>
 
     <!-- Cancer Prediction Web App -->
-         <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
-  <img src="https://chat.openai.com/mnt/data/images.jpeg" alt="Cancer Prediction" style="width: 100%; height: 200px;" />
+     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+  <img
+    src="https://drive.google.com/uc?export=view&id=1UZPRqiigr5xnrj_Mo-IqK6PVMQ2WrkpF"
+    alt="Cancer Prediction"
+    style="width: 100%; height: 200px; object-fit: contain;"
+  />
   <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🧬 Cancer Prediction Web App</h3>
   <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
-    A Streamlit tool using a Random Forest classifier to predict tumor type, with an intuitive UI for assisting medical decisions.
+    A Streamlit tool using a Random Forest classifier to predict tumor type, with an intuitive UI for medical decision support.
   </p>
-  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Streamlit, Machine Learning</p>
+  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">
+    Tech: Python, Streamlit, Machine Learning
+  </p>
   <div class="flex gap-4">
-    <a href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank" class="text-blue-600 hover:underline font-medium">
+    <a
+      href="https://github.com/Azad-Bhasme/Cancer-predicition-.git"
+      target="_blank"
+      class="text-blue-600 hover:underline font-medium"
+    >
       <i class="fab fa-github fa-lg"></i> GitHub
     </a>
-    <a href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">
+    <a
+      href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/"
+      target="_blank"
+      class="text-blue-600 hover:underline font-medium"
+    >
       🚀 Demo
     </a>
   </div>
 </div>
+
 
     <!-- Dashboard Project -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
