--- a/index.html
+++ b/index.html
@@ -424,11 +424,11 @@
     
 
     <!-- FireWatch AI -->
-    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+      <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
   <img
-    src= "https://drive.google.com/uc?export=view&id=1NPcV68kiBIK5qOmAzEczxn611lgDTdot"
-    alt="FireWatch AI"
-    style="width: 100%; height: 200px; object-fit: contain;"
+    src="https://i.ibb.co/9tKw4kN/fire-logo.gif"
+    alt="Fire detection animation"
+    class="w-full h-48 object-contain"
   />
   <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🔥 FireWatch AI</h3>
   <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
@@ -438,22 +438,15 @@
     Tech: Python, YOLOv8, OpenCV, Streamlit
   </p>
   <div class="flex gap-4">
-    <a
-      href="https://github.com/Azad-Bhasme"
-      target="_blank"
-      class="text-blue-600 hover:underline font-medium"
-    >
+    <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium">
       <i class="fab fa-github fa-lg"></i> GitHub
     </a>
-    <a
-      href="https://firewatch-ai-byazad.streamlit.app"
-      target="_blank"
-      class="text-blue-600 hover:underline font-medium"
-    >
+    <a href="https://firewatch-ai-byazad.streamlit.app" target="_blank" class="text-blue-600 hover:underline font-medium">
       🚀 Demo
     </a>
   </div>
 </div>
+
 
     <!-- CineSuggest -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
@@ -503,11 +496,11 @@
     </div>
 
     <!-- Cancer Prediction Web App -->
-     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+    <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
   <img
-    src="https://drive.google.com/uc?export=view&id=1UZPRqiigr5xnrj_Mo-IqK6PVMQ2WrkpF"
-    alt="Cancer Prediction"
-    style="width: 100%; height: 200px; object-fit: contain;"
+    src="https://i.ibb.co/CnczBx7/cancer-logo.png"
+    alt="Cancer diagnosis logo"
+    class="w-full h-48 object-contain"
   />
   <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🧬 Cancer Prediction Web App</h3>
   <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
@@ -517,23 +510,14 @@
     Tech: Python, Streamlit, Machine Learning
   </p>
   <div class="flex gap-4">
-    <a
-      href="https://github.com/Azad-Bhasme/Cancer-predicition-.git"
-      target="_blank"
-      class="text-blue-600 hover:underline font-medium"
-    >
+    <a href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank" class="text-blue-600 hover:underline font-medium">
       <i class="fab fa-github fa-lg"></i> GitHub
     </a>
-    <a
-      href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/"
-      target="_blank"
-      class="text-blue-600 hover:underline font-medium"
-    >
+    <a href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">
       🚀 Demo
     </a>
   </div>
 </div>
-
 
     <!-- Dashboard Project -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
